--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -19,8 +19,10 @@ My Projects
                     <tbody>
                         {% for project in list_projects %}
                             <tr>
-                                <td>{{ project.name }}</td>
-                                <td>{{ project.tasks.count }}</td>
+                                <td>
+                                    <a href="{% url 'show_project' project.id %}">{{ project.name }}</a>
+                                </td>
+                                <td>{{ project.tasks.all|length }}</td>
                             </tr>
                         {% endfor %}
                     </tbody>
