--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -8,6 +8,7 @@ My Projects
     <main>
         <div>
             <h1>My Projects</h1>
+            <p><a href="{% url 'create_project' %}">Create a new project</a></p>
             {% if list_projects %}
                 <table>
                     <thead>
