--- a/tasks/templates/tasks/list.html
+++ b/tasks/templates/tasks/list.html
@@ -1,14 +1,15 @@
 {% extends 'base.html' %}
 
 {% block title %}
-My Tasks
-{%endblock title %}
-
+    My Tasks
+{% endblock title %}
 {% block content %}
     <main>
         <div>
             <h1>My Tasks</h1>
-            <p><a href="{% url 'create_project' %}">Create a new project</a></p>
+            <p>
+                <a href="{% url 'create_project' %}">Create a new project</a>
+            </p>
             {% if tasks %}
                 <table>
                     <thead>
